Make Status creation and logging less verbose
Just use the helpers added in latest versions.